Spacing issues on login and sign uo pages

--- a/frontend/src/pages/loginPage/loginForm/loginForm.module.css
+++ b/frontend/src/pages/loginPage/loginForm/loginForm.module.css
@@ -41,4 +41,8 @@
     #loginForm > h2 {
         font-size: 17pt;
     }
+
+    #container > div {
+        margin-bottom: 5px;
+    }
 }
